--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A sample site with simple js">
         <title>Mark Statement - AV</title>  
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
+        <link rel="shortcut icon" type="image/jpeg" href="favicon.jpeg">
     </head>
     <body oncontextmenu="return false">
         <div class="container">
